# jittr

./: .gitignore  INSTALLATION.txt  README.txt  scanner_workflow.org  todo.org
cpp/: CMakeLists.txt
cpp/include/jittr/: hello_world.h
cpp/src/: CMakeLists.txt  hello_world.cpp  hello_world_main.cpp
find_cam_cpp/: CMakeLists.txt
find_cam_cpp/include/: find_cam.h
find_cam_cpp/include/jittr/: find_cam.h
find_cam_cpp/src/: CMakeLists.txt  find_cam.cpp  find_cam_main.cpp  find_cam_main2.cpp
jittr/: .project  TEXTURES_README.txt  __init__.py  render_settings.txt  render_settings.yaml  render_settings.yml
jittr/assets/: bird1.a2c  cube_plane.settings.yml  make_dataset.blend  monkey.settings.yml
jittr/assets/models/cube_plane/: cube_plane.egg  cube_plane.settings.yml
jittr/assets/models/horse/: horse.mtl  horse.yaml
jittr/assets/models/monkey/: monkey.settings.yml
jittr/assets/models/mouse/: mouse.mtl  mouse.yaml  mouse_0.npy  mouse_0.yaml  mouse_1.npy  mouse_1.yaml  mouse_10.npy  mouse_10.yaml  mouse_11.npy  mouse_11.yaml  mouse_12.npy  mouse_12.yaml  mouse_13.npy  mouse_13.yaml  mouse_14.npy  mouse_14.yaml  mouse_15.npy  mouse_15.yaml  mouse_2.npy  mouse_2.yaml  mouse_3.npy  mouse_3.yaml  mouse_4.npy  mouse_4.yaml  mouse_5.npy  mouse_5.yaml  mouse_6.npy  mouse_6.yaml  mouse_7.npy  mouse_7.yaml  mouse_8.npy  mouse_8.yaml  mouse_9.npy  mouse_9.yaml
jittr/assets/models/panda_model/: panda_model.settings.yml
jittr/assets/models/plane/: plane.mtl
jittr/assets/models/shell/: shell.mtl
jittr/assets/models/shuttle/: shuttle.mtl  shuttle.yaml  shuttle.yml
jittr/assets/models/tree/: treeNew.mtl  tree_0.npy  tree_1.npy  tree_2.npy  tree_3.npy  tree_4.npy  tree_5.npy  tree_6.npy  tree_7.npy
jittr/assets/models/truck/: truck.mtl  truck.yaml
jittr/blender/: create_textures.py  make_array_6.py  make_dataset.blend
jittr/blender/6_objects_dataset/: labels  make_array_6.py
jittr/lego/: generate_ldr.py  make_array.py  partlist_bl  parts.ldr
jittr/scripts/: blender_make_dataset.py  create_textures.py  find_cam.py  find_cam_test.py  fix_obj.py  hello_obj.py  make_dataset.py  png_to_memmaps.py  test_render.py
stitch_obj_textures/: .project  create_textures.blend  create_textures.py  find_cam.py  fix_obj.py  stitch_obj.py  stitch_textures.py  tree2.mtl
stitch_obj_textures/simpleobj/: tree.mtl
